# navi

./: .gitignore  Cargo.toml  README.md  navi.toml  nodemon.json  package-lock.json  package.json  pnpm-lock.yaml
scripts/: com.melvillian.navi.plist  navi_launchd_wrapper.sh
server/lib/: datatypes.ts  notion.ts  routes.ts
server/views/: index.ejs
src/: config.rs  intelligence.rs  lib.rs  main.rs  notion.rs
src/core/: datatypes.rs
