[package]
name = "navi"
authors = ["Alex Melville"]
version = "0.0.1"
edition = "2021"

[dependencies]
chrono = "0.4.38"
dotenv = "0.15.0"
reqwest = "0.11.7"
notion-client = { git = "https://github.com/Melvillian/notion-client.git", branch = "main" }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1", features = ["full"] }
log = { version = "0.4.22", features = ["kv"] }
env_logger = "0.11.5"
dendron = "0.1.5"
derive_more = { version = "1.0.0", features = ["full"] }
async-openai = "0.25.0"
thiserror = "1.0.65"
clap = { version = "4.5.1", features = ["derive"] }
toml = "0.8.8"
regex = "1.10.2"
